tests/fail/rvalue.c
struct abc
{
    int a, b, c;
};

struct abc get_abc();

int main() { &(get_abc().a); }